# PowerInfer_x64

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.cuda  LICENSE-APACHE  LICENSE-MIT  PLAN.md  PROJECT_STATUS.md  QUALITY.md  README.md  SECURITY.md  build.rs  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  sre_incident.md
.github/workflows/: cd.yml  ci.yml
benches/: benchmark.rs
deployments/: docker-compose.yml
deployments/monitoring/grafana/provisioning/dashboards/: dashboard.yml
docs/: architecture.md  build.md  performance.md
infrastructure/: README.md
infrastructure/alerting/: alertmanager.yml  rules.yml
infrastructure/alerting/runbooks/: gpu-oom.md  high-latency.md  low-throughput.md  service-down.md
infrastructure/dashboards/: powerinfer.json
infrastructure/kubernetes/: manifests.yaml
infrastructure/monitoring/: prometheus.yml
infrastructure/terraform/: .gitignore  README.md  main.tf  networking.tf  outputs.tf  terraform.tfvars.example  user_data.sh.tpl  variables.tf
kernels/cuda/: fused_ops.rs  matmul.rs  mod.rs  moe.rs
kernels/vulkan/: fused_ops.rs  matmul.rs  mod.rs  moe.rs
src/: cli.rs  lib.rs  metrics.rs  ops.rs  profiler.rs  simd.rs  sysinfo.rs  tokenizer.rs  weights.rs  weights_new.rs
src/activation/: mod.rs
src/benchmark/: mod.rs
src/cuda/: mod.rs
src/gguf/: mod.rs
src/model/: mod.rs
src/moe/: mod.rs
src/predictor/: mod.rs
src/quant/: f16_utils.rs  mod.rs
src/runtime/: mod.rs
src/server/: mod.rs
src/ssm/: mod.rs
src/turboquant/: mod.rs
tests/: integration.rs  quality.rs  smoke.rs  soak.rs
tests/load/: slo-validation.js
