[package]
name = "powerinfer"
version = "0.1.0"
edition = "2021"
authors = ["PowerInfer_x64 Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/SmartEst74/PowerInfer_x64"
description = "Neuron-level sparse LLM inference engine in pure Rust"
keywords = ["llm", "inference", "rust", "gpu", "sparse"]
categories = ["science", "ai", "hardware"]

[dependencies]
# GGUF parsing
gguf-rs = "0.1"

# Numeric types
half = "2.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP server (optional)
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
prometheus = { version = "0.14", optional = true }
tracing = "0.1"
tracing-subscriber = "0.3"

# Linear algebra (predictor training)
ndarray = { version = "0.16", optional = true }
rand = { version = "0.8", optional = true }

# Utilities
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"

# GPU backends (optional)
cust = { version = "0.3", optional = true }
ash = { version = "0.38", optional = true }

[build-dependencies]

[dev-dependencies]
criterion = "0.5"

[features]
default = ["cpu"]
cpu = []
cuda = ["dep:cust"]
vulkan = ["dep:ash"]
server = ["dep:axum", "dep:tower-http", "dep:prometheus", "tokio/rt-multi-thread"]
profiling = []
predictor = ["ndarray", "rand"]
all = ["cpu", "cuda", "vulkan", "server", "profiling", "predictor"]

[lib]
name = "powerinfer"
path = "src/lib.rs"

[[bin]]
name = "powerinfer-cli"
path = "src/cli.rs"
required-features = ["cpu"]

[[bin]]
name = "powerinfer-profile"
path = "src/profiler.rs"
required-features = ["profiling"]

[[bin]]
name = "powerinfer-serve"
path = "src/bin/powerinfer-serve.rs"
required-features = ["server"]

[[bin]]
name = "real_test"
path = "src/bin/real_test.rs"

[[bin]]
name = "gguf_dump"
path = "src/bin/gguf_dump.rs"

[[bin]]
name = "timing_test"
path = "src/bin/timing_test.rs"

[[bin]]
name = "debug_logits"
path = "src/bin/debug_logits.rs"

[[bench]]
name = "benchmark"
harness = false
path = "benches/benchmark.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
